--- a/ch-6/labs-2/package.json
+++ b/ch-6/labs-2/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "fastify": "^2.0.0",
+    "fastify": "2.x.x",
     "rfdc": "1.1.3",
     "semver": "^7.3.4"
   }
